Add front to laravel project
