# web-api/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\CategoriesController;
+use App\Http\Controllers\Api\SenderController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -13,3 +14,4 @@ Route::post('/categories/create', [CategoriesController::class, 'create']);
 Route::get('/categories/{id}', [CategoriesController::class, 'getById']);
 Route::post('/categories/edit/{id}', [CategoriesController::class, 'edit']);
 Route::delete('/categories/{id}', [CategoriesController::class, 'delete']);
+Route::post('/send/email', [SenderController::class, 'send_email']);
